Sun Feb 15 03:50:21 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* hash.c (rb_hash): always return a fixnum value because a return
	  value of rb_hash may be used as a hash value itself and bignums have
	  no unique VALUE.

	* test/ruby/test_hash.rb: add a test for above.

Sun Feb 15 00:45:41 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_uniq_bang, rb_ary_uniq): unique by the result of
	  given block.  [ruby-dev:37998]

Sun Feb 15 00:39:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (ary_resize_capa): should not overwrite outside embedded
	  array.

Sat Feb 14 20:18:19 2009  Tanaka Akira  <akr@fsij.org>

	* test/test_time.rb: extracted from lib/time.rb.

Sat Feb 14 19:20:15 2009  Tanaka Akira  <akr@fsij.org>

	* lib/pathname.rb: obsolete methods removed.
	  [ruby-core:21564]

Sat Feb 14 13:14:18 2009  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>

	* iseq.c: remove nil parameter from Proc#parameters
	  after rest appeared.

Sat Feb 14 07:23:52 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_external_str_new_with_enc): change evaluatioin order
	  for speed.

Sat Feb 14 02:20:04 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/sockport.h (SET_SA_LEN): cast to void for supressing a
	  warning.

Fri Feb 13 23:37:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/win32/lib/Win32API.rb (Win32API#initialize): DL.dlopen
	  raises DLError.

Fri Feb 13 21:13:19 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (Init_socket): define TCPServer#listen and
	  UNIXServer#listen here for rdoc.

Fri Feb 13 20:59:48 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (extract_ipv6_pktinfo): set sa_len for 4.4BSD.

Fri Feb 13 15:34:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (simple_default_value): removed.  default values of optional
	  parameters are not available still now.  [ruby-dev:37980]

Fri Feb 13 15:11:11 2009  Koichi Sasada  <ko1@atdot.net>
